tf-data-source/vpc+priv sub+SG=EC2/SG.tf
resource "aws_security_group" "pro-vpc-sg" {
    vpc_id = aws_vpc.pro-vpc.id

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "pro-vpc-sg"
    }
  
}
